salesforce-port/force-app/main/default/objects/Expense_Approved__e/Expense_Approved__e.object-meta.xml
<CustomObject>
    <label>Expense Approved</label>
    <pluralLabel>Expense Approved Events</pluralLabel>
</CustomObject>