salesforce-port/force-app/main/default/objects/Expense_Approved__e/fields/Approver_Id__c.field-meta.xml
<CustomField>
    <fullName>Approver_Id__c</fullName>
    <label>Approver Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>