salesforce-port/force-app/main/default/objects/Expense_Approved__e/fields/Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Report_Id__c</fullName>
    <label>Report Id</label>
    <type>Text</type>
    <length>18</length>
</CustomField>