salesforce-port/force-app/main/default/objects/Expense_Approved__e/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>